--- a/demo_client.ipynb
+++ b/demo_client.ipynb
@@ -694,22 +694,45 @@
   },
   {
    "source": [
-    "### Is there any information about external files?"
+    "### Is there any information about external files?\n",
+    "\n",
+    "For data that is deemed too *large* for storage in MongoDB documents, such as area detector image frames which may be several MB in size and a milllion pixels, that content is stored in files.  In such cases, the RunEngine records references to the file, its path, and the file format and frame information within the file.\n",
+    "\n",
+    "Here is an example from our `take_image()` plan which records a single image frame to an HDF5 file.  The `'spec': 'AD_HDF5'` is a reference to a [handler](https://github.com/bluesky/area-detector-handlers/blob/c3db30dd1bee8c9cc26b369c66963f1bd6d36802/area_detector_handlers/handlers.py#L162-L183) which expects the image frame to be in this HDF5 file at hard-coded address `/entry/data/data`."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "uri='http://localhost:8000/api/v1/documents/bdp2022/43044b6e-f6ba-48cb-a975-90d236dcbaaa'\nr.text='[\"start\", {\"uid\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\", \"time\": 1661877393.776133, \"versions\": {\"apstools\": \"1.6.2\", \"bluesky\": \"1.8.3\", \"bluesky_queueserver\": \"0.0.15\", \"databroker\": \"1.2.5\", \"epics\": \"3.5.0\", \"h5py\": \"3.7.0\", \"matplotlib\": \"3.5.2\", \"numpy\": \"1.20.3\", \"ophyd\": \"1.6.4\", \"pyRestTable\": \"2020.0.3\", \"spec2nexus\": \"2021.2.1\"}, \"databroker_catalog\": \"bdp2022\", \"login_id\": \"bdp@terrier.xray.aps.anl.gov\", \"beamline_id\": \"BDP\", \"instrument_name\": \"APS-U Beamline Data Pipelines project in 2022\", \"proposal_id\": \"bdp2022\", \"milestone\": \"BDP M4 demo\", \"pid\": 27615, \"scan_id\": 1829, \"sample\": \"simulated_sample_83_68\", \"game_key\": \"fine image\", \"plan_type\": \"generator\", \"plan_name\": \"take_image\", \"detectors\": [\"adsimdet\"], \"num_points\": 1, \"num_intervals\": 0, \"plan_args\": {\"detectors\": [\"MySimDetector(prefix=\\'bdpSimExample:\\', name=\\'adsimdet\\', read_attrs=[\\'hdf1\\', \\'pva\\'], configuration_attrs=[\\'cam\\', \\'cam.acquire_period\\', \\'cam.acquire_time\\', \\'cam.image_mode\\', \\'cam.manufacturer\\', \\'cam.model\\', \\'cam.num_exposures\\', \\'cam.num_images\\', \\'cam.trigger_mode\\', \\'hdf1\\', \\'pva\\'])\"], \"num\": 1}, \"hints\": {\"dimensions\": [[[\"time\"], \"primary\"]]}, \"incident_beam\": 195.89805775534157, \"incident_beam_units\": \"simulation\", \"coarse_x\": 0.0, \"coarse_y\": 0.0, \"coarse_x_units\": \"degrees\", \"coarse_y_units\": \"degrees\", \"fine_x\": -223.081675898186, \"fine_y\": -331.5786710024647, \"acquire_time\": 0.25, \"acquire_period\": 0.251, \"frames_per_image\": 1, \"HDF5_compression\": \"zlib\", \"shutter\": \"open\", \"bdp_demo\": \"M4\"}]\\n[\"descriptor\", {\"run_start\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\", \"time\": 1661877395.75955, \"data_keys\": {\"adsimdet_image\": {\"shape\": [1, 1024, 1024], \"source\": \"PV:bdpSimExample:\", \"dtype\": \"array\", \"external\": \"FILESTORE:\", \"object_name\": \"adsimdet\"}}, \"uid\": \"f8a3d064-8c2e-44de-acbd-f2612dba8ed9\", \"configuration\": {\"adsimdet\": {\"data\": {\"adsimdet_cam_acquire_period\": 0.251, \"adsimdet_cam_acquire_time\": 0.25, \"adsimdet_cam_image_mode\": 0, \"adsimdet_cam_manufacturer\": \"Simulated detector\", \"adsimdet_cam_model\": \"Basic simulator\", \"adsimdet_cam_num_exposures\": 1, \"adsimdet_cam_num_images\": 1, \"adsimdet_cam_trigger_mode\": 0}, \"timestamps\": {\"adsimdet_cam_acquire_period\": 1661877393.644936, \"adsimdet_cam_acquire_time\": 1661877393.633899, \"adsimdet_cam_image_mode\": 1661877393.613209, \"adsimdet_cam_manufacturer\": 1661876690.558074, \"adsimdet_cam_model\": 1661876690.558081, \"adsimdet_cam_num_exposures\": 1661876791.7751992, \"adsimdet_cam_num_images\": 1661877393.623536, \"adsimdet_cam_trigger_mode\": 1661876714.6509168}, \"data_keys\": {\"adsimdet_cam_acquire_period\": {\"source\": \"PV:bdpSimExample:cam1:AcquirePeriod_RBV\", \"dtype\": \"number\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0.0, \"upper_ctrl_limit\": 0.0, \"precision\": 3}, \"adsimdet_cam_acquire_time\": {\"source\": \"PV:bdpSimExample:cam1:AcquireTime_RBV\", \"dtype\": \"number\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0.0, \"upper_ctrl_limit\": 0.0, \"precision\": 3}, \"adsimdet_cam_image_mode\": {\"source\": \"PV:bdpSimExample:cam1:ImageMode_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null, \"enum_strs\": [\"Single\", \"Multiple\", \"Continuous\"]}, \"adsimdet_cam_manufacturer\": {\"source\": \"PV:bdpSimExample:cam1:Manufacturer_RBV\", \"dtype\": \"string\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null}, \"adsimdet_cam_model\": {\"source\": \"PV:bdpSimExample:cam1:Model_RBV\", \"dtype\": \"string\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null}, \"adsimdet_cam_num_exposures\": {\"source\": \"PV:bdpSimExample:cam1:NumExposures_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0, \"upper_ctrl_limit\": 0}, \"adsimdet_cam_num_images\": {\"source\": \"PV:bdpSimExample:cam1:NumImages_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": \"\", \"lower_ctrl_limit\": 0, \"upper_ctrl_limit\": 0}, \"adsimdet_cam_trigger_mode\": {\"source\": \"PV:bdpSimExample:cam1:TriggerMode_RBV\", \"dtype\": \"integer\", \"shape\": [], \"units\": null, \"lower_ctrl_limit\": null, \"upper_ctrl_limit\": null, \"enum_strs\": [\"Internal\", \"External\"]}}}}, \"name\": \"primary\", \"hints\": {\"adsimdet\": {\"fields\": []}}, \"object_keys\": {\"adsimdet\": [\"adsimdet_image\"]}}]\\n[\"resource\", {\"spec\": \"AD_HDF5\", \"root\": \"/\", \"resource_path\": \"clhome/BDP/voyager/adsimdet/2022/08/30/d585f272-dd9b-4ac0-b521_000.h5\", \"resource_kwargs\": {\"frame_per_point\": 1}, \"path_semantics\": \"posix\", \"uid\": \"506944a6-7632-4db8-9448-82b258211ed4\", \"run_start\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\"}]\\n[\"datum_page\", {\"resource\": \"506944a6-7632-4db8-9448-82b258211ed4\", \"datum_id\": [\"506944a6-7632-4db8-9448-82b258211ed4/0\"], \"datum_kwargs\": {\"point_number\": [0]}}]\\n[\"event_page\", {\"time\": [1661877395.766505], \"uid\": [\"b1e6e4be-0f75-4eab-97af-e8a35da7d109\"], \"seq_num\": [1], \"descriptor\": \"f8a3d064-8c2e-44de-acbd-f2612dba8ed9\", \"filled\": {\"adsimdet_image\": [false]}, \"data\": {\"adsimdet_image\": [\"506944a6-7632-4db8-9448-82b258211ed4/0\"]}, \"timestamps\": {\"adsimdet_image\": [1661877393.7810526]}}]\\n[\"stop\", {\"run_start\": \"43044b6e-f6ba-48cb-a975-90d236dcbaaa\", \"time\": 1661877395.7828147, \"uid\": \"3d074ebc-208c-4e4d-98fc-926fca752f51\", \"exit_status\": \"success\", \"reason\": \"\", \"num_events\": {\"primary\": 1}}]\\n'\n"
+      "uri='http://localhost:8000/api/v1/documents/bdp2022/43044b6e-f6ba-48cb-a975-90d236dcbaaa?fill=false'\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'resource': {'spec': 'AD_HDF5',\n",
+       "  'root': '/',\n",
+       "  'resource_path': 'clhome/BDP/voyager/adsimdet/2022/08/30/d585f272-dd9b-4ac0-b521_000.h5',\n",
+       "  'resource_kwargs': {'frame_per_point': 1},\n",
+       "  'path_semantics': 'posix',\n",
+       "  'uid': '506944a6-7632-4db8-9448-82b258211ed4',\n",
+       "  'run_start': '43044b6e-f6ba-48cb-a975-90d236dcbaaa'},\n",
+       " 'datum_page': {'resource': '506944a6-7632-4db8-9448-82b258211ed4',\n",
+       "  'datum_id': ['506944a6-7632-4db8-9448-82b258211ed4/0'],\n",
+       "  'datum_kwargs': {'point_number': [0]}}}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
     }
    ],
    "source": [
@@ -722,8 +745,14 @@
     "    \"?fill=false\"\n",
     ")\n",
     "print(f\"{uri=}\")\n",
-    "r = requests.get(uri)\n",
-    "print(f\"{r.text=}\")"
+    "\n",
+    "# special handling here to overcome a problem with this API request\n",
+    "import json\n",
+    "r = requests.get(uri)  # note no json() call here, it's a problem in the server's response\n",
+    "r = f\"[{r.text.strip()}]\".replace(\"\\n\", \",\")\n",
+    "r = json.loads(r)\n",
+    "\n",
+    "{k:doc for k, doc in r if k in (\"datum_page\", \"resource\")}"
    ]
   },
   {
