--- a/pyapi_date_plan_filters.ipynb
+++ b/pyapi_date_plan_filters.ipynb
@@ -325,7 +325,7 @@
     {
      "data": {
       "text/plain": [
-       "<Node {}>"
+       "<Node {'d6e1bad1-92f6-4257-8d5e-53172cd9b784', ...} ~6 entries>"
       ]
      },
      "execution_count": 16,
@@ -334,7 +334,7 @@
     }
    ],
    "source": [
-    "get_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\", until=\"2021-05-19 15:15\", keys={\"plan_name\": \"rel_scan\"})"
+    "get_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\", until=\"2021-05-19 15:15\", plan_name=\"rel_scan\")"
    ]
   },
   {
@@ -343,6 +343,27 @@
    "metadata": {},
    "source": [
     "Compare this last search with the results above.  Both times, 6 entries were found."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Node {'a4c77cc5-dd49-4fc2-90e6-e3cd92667037'}>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# One last search, for a specific `scan_id`:\n",
+    "get_runs(client[\"class_2021_03\"], scan_id=188)"
    ]
   }
  ],
