MNT #2 update the example notebook

--- a/pyapi_date_plan_filters.ipynb
+++ b/pyapi_date_plan_filters.ipynb
@@ -106,9 +106,19 @@
    ],
    "source": [
     "# Find all runs in the catalog between these two ISO8601 dates.\n",
+    "# (Show ALL the steps to convert the dates to timestamps for the tiled query.)\n",
+    "# Later, we'll build a small utility module to make these searches look easier.\n",
     "start_time = \"2021-03-17 00:30\"\n",
     "end_time = \"2021-05-19 15:15\"\n",
-    "cat = cat.search(QueryTimeSince(start_time)).search(QueryTimeUntil(end_time))\n",
+    "cat = cat.search(  # since\n",
+    "    tiled.queries.Key(\"time\") >= datetime.datetime.timestamp(\n",
+    "        datetime.datetime.fromisoformat(start_time)\n",
+    "    )\n",
+    ").search(  # until\n",
+    "    tiled.queries.Key(\"time\") < datetime.datetime.timestamp(\n",
+    "        datetime.datetime.fromisoformat(end_time)\n",
+    "    )\n",
+    ")\n",
     "print(f\"{cat=}\")"
    ]
   },
@@ -126,7 +136,7 @@
     }
    ],
    "source": [
-    "# Find run(s) which match given metadata: given plan_name\n",
+    "# Filter this `cat` further.  Find run(s) which match given metadata: given plan_name.\n",
     "plan_name = \"rel_scan\"\n",
     "cat = cat.search(tiled.queries.Key(\"plan_name\") == plan_name)\n",
     "print(f\"{cat=}\")"
@@ -218,7 +228,7 @@
    "source": [
     "----\n",
     "\n",
-    "Make a single function that searches by date range and metadata keys."
+    "Use functions from local `utils.py` file to search by date range and metadata keys and then make a nice table."
    ]
   },
   {
@@ -227,34 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_runs(cat, since=None, until=None, **keys):\n",
-    "    \"\"\"\n",
-    "    Return a new catalog, filtered by search terms.\n",
-    "    \n",
-    "    Runs will be selected with start time `>=since` and `< until`.\n",
-    "    If either is `None`, then the corresponding filter will not be\n",
-    "    applied.\n",
-    "    \n",
-    "    Parameters\n",
-    "    \n",
-    "    `cat` obj :\n",
-    "        This is the catalog to be searched.\n",
-    "        `Node` object returned by tiled.client.\n",
-    "    `since` str :\n",
-    "        Earliest start date (& time), in ISO8601 format.\n",
-    "    `until` str :\n",
-    "        Latest start date (& time), in ISO8601 format.\n",
-    "    `keys` dict :\n",
-    "        Dictionary of metadata keys and values to be matched.\n",
-    "    \"\"\"\n",
-    "    if since is not None:\n",
-    "        cat = cat.search(QueryTimeSince(since))\n",
-    "    if until is not None:\n",
-    "        cat = cat.search(QueryTimeUntil(until))\n",
-    "    \n",
-    "    for k, v in keys.items():\n",
-    "        cat = cat.search(tiled.queries.Key(k) == v)\n",
-    "    return cat"
+    "from utils import *"
    ]
   },
   {
@@ -263,18 +246,36 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Node {'d6e1bad1-92f6-4257-8d5e-53172cd9b784', ...} ~16 entries>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "#  uid7    scan# plan     #points exit    started                    streams                               \n",
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "1  d6e1bad 25    rel_scan 23      success 2021-03-17 00:30:04.160113 baseline, primary, temperature_monitor\n",
+      "2  e43969f 26    rel_scan 23      success 2021-03-17 00:30:21.215641 baseline, primary, temperature_monitor\n",
+      "3  fb747f8 27    rel_scan 23      success 2021-03-17 00:30:27.630615 baseline, primary, temperature_monitor\n",
+      "4  e8c36fe 28    rel_scan 23      success 2021-03-17 00:30:33.852055 baseline, primary, temperature_monitor\n",
+      "5  8e2b3b5 29    count    1       success 2021-03-17 00:31:23.124599 baseline, primary                     \n",
+      "6  aab735d 30    count    10      success 2021-03-17 00:31:23.529676 baseline, primary                     \n",
+      "7  0ac9f00 31    count    10      success 2021-03-17 00:31:24.314197 baseline, primary                     \n",
+      "8  be32b29 32    count    50      success 2021-03-17 00:31:44.803099 baseline, primary                     \n",
+      "9  766d818 33    count    1       success 2021-03-17 00:32:55.210801 baseline, primary                     \n",
+      "10 5c304b4 33    scan     11      success 2021-04-07 15:55:09.987161 baseline, primary                     \n",
+      "11 b023724 187   rel_scan 5       success 2021-05-19 15:13:47.622341 baseline, primary                     \n",
+      "12 a4c77cc 188   rel_scan 8       success 2021-05-19 15:14:56.577983 baseline, primary                     \n",
+      "13 d8c2232 189   rel_scan 8       success 2021-05-19 15:18:28.539632 baseline, primary                     \n",
+      "14 2d64f4a 190   rel_scan 8       success 2021-05-19 15:18:59.440374 baseline, primary                     \n",
+      "15 74574ae 191   rel_scan 8       success 2021-05-19 15:19:27.661461 baseline, primary                     \n",
+      "16 e386299 192   rel_scan 8       success 2021-05-19 15:22:03.070104 baseline, primary                     \n",
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "get_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\")"
+    "runs = get_tiled_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\")\n",
+    "print(run_summary_table(runs))"
    ]
   },
   {
@@ -283,18 +284,56 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Node {'83cae163-e32b-4e62-887b-66f03f61ec33', ...} ~36 entries>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "#  uid7    scan# plan     #points exit    started                    streams                               \n",
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "1  83cae16 1     count    20      success 2021-03-15 00:52:29.556111 baseline, primary                     \n",
+      "2  8e78fb1 2     count    20      success 2021-03-15 11:44:21.813033 baseline, primary                     \n",
+      "3  933d541 3     count    20      success 2021-03-15 11:46:21.149419 baseline, primary                     \n",
+      "4  0ebbc98 4     count    20      success 2021-03-15 11:49:42.879512 baseline, primary                     \n",
+      "5  b90ceb8 5     count    20      success 2021-03-15 11:54:56.214300 baseline, primary                     \n",
+      "6  a501ae6 6     scan     5       success 2021-03-16 16:42:38.833505 baseline, primary                     \n",
+      "7  1db467b 7     scan     5       success 2021-03-16 16:42:48.120654 baseline, primary                     \n",
+      "8  dfe19ae 8     scan     5       success 2021-03-16 16:42:57.243883 baseline, primary                     \n",
+      "9  8efb65d 9     scan     5       success 2021-03-16 16:43:06.597677 baseline, primary                     \n",
+      "10 8075d0f 10    scan     5       success 2021-03-16 17:03:25.864460 baseline, primary                     \n",
+      "11 719a2a4 11    scan     5       success 2021-03-16 17:03:34.888805 baseline, primary                     \n",
+      "12 3aca2b2 12    scan     5       success 2021-03-16 17:03:43.958270 baseline, primary                     \n",
+      "13 262caa2 13    scan     5       success 2021-03-16 17:03:53.558178 baseline, primary                     \n",
+      "14 2ca3eff 14    scan     5       success 2021-03-16 17:04:54.216955 baseline, primary                     \n",
+      "15 f96ede6 15    scan     5       None    2021-03-16 17:05:03.556136 baseline, primary                     \n",
+      "16 77a2b56 16    scan     5       success 2021-03-16 17:05:32.949942 baseline, primary                     \n",
+      "17 a8ab236 17    scan     5       success 2021-03-16 17:05:42.789213 baseline, primary                     \n",
+      "18 0f526a3 18    scan     5       success 2021-03-16 17:05:51.931175 baseline, primary                     \n",
+      "19 0a242c0 19    scan     5       success 2021-03-16 17:06:01.575761 baseline, primary                     \n",
+      "20 5822398 20    count    1       success 2021-03-17 00:27:22.174106 baseline, primary                     \n",
+      "21 026f81d 21    count    1       success 2021-03-17 00:27:23.738047 baseline, primary                     \n",
+      "22 8a7b7b7 22    count    1       success 2021-03-17 00:27:55.771259 baseline, primary                     \n",
+      "23 0d828e5 23    rel_scan 23      success 2021-03-17 00:29:40.690101 baseline, primary, temperature_monitor\n",
+      "24 7e1bb9d 24    rel_scan 23      success 2021-03-17 00:29:57.340499 baseline, primary, temperature_monitor\n",
+      "25 d6e1bad 25    rel_scan 23      success 2021-03-17 00:30:04.160113 baseline, primary, temperature_monitor\n",
+      "26 e43969f 26    rel_scan 23      success 2021-03-17 00:30:21.215641 baseline, primary, temperature_monitor\n",
+      "27 fb747f8 27    rel_scan 23      success 2021-03-17 00:30:27.630615 baseline, primary, temperature_monitor\n",
+      "28 e8c36fe 28    rel_scan 23      success 2021-03-17 00:30:33.852055 baseline, primary, temperature_monitor\n",
+      "29 8e2b3b5 29    count    1       success 2021-03-17 00:31:23.124599 baseline, primary                     \n",
+      "30 aab735d 30    count    10      success 2021-03-17 00:31:23.529676 baseline, primary                     \n",
+      "31 0ac9f00 31    count    10      success 2021-03-17 00:31:24.314197 baseline, primary                     \n",
+      "32 be32b29 32    count    50      success 2021-03-17 00:31:44.803099 baseline, primary                     \n",
+      "33 766d818 33    count    1       success 2021-03-17 00:32:55.210801 baseline, primary                     \n",
+      "34 5c304b4 33    scan     11      success 2021-04-07 15:55:09.987161 baseline, primary                     \n",
+      "35 b023724 187   rel_scan 5       success 2021-05-19 15:13:47.622341 baseline, primary                     \n",
+      "36 a4c77cc 188   rel_scan 8       success 2021-05-19 15:14:56.577983 baseline, primary                     \n",
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "get_runs(client[\"class_2021_03\"], until=\"2021-05-19 15:15\")"
+    "runs = get_tiled_runs(client[\"class_2021_03\"], until=\"2021-05-19 15:15\")\n",
+    "print(run_summary_table(runs))"
    ]
   },
   {
@@ -303,18 +342,32 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Node {'d6e1bad1-92f6-4257-8d5e-53172cd9b784', ...} ~12 entries>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "#  uid7    scan# plan     #points exit    started                    streams                               \n",
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "1  d6e1bad 25    rel_scan 23      success 2021-03-17 00:30:04.160113 baseline, primary, temperature_monitor\n",
+      "2  e43969f 26    rel_scan 23      success 2021-03-17 00:30:21.215641 baseline, primary, temperature_monitor\n",
+      "3  fb747f8 27    rel_scan 23      success 2021-03-17 00:30:27.630615 baseline, primary, temperature_monitor\n",
+      "4  e8c36fe 28    rel_scan 23      success 2021-03-17 00:30:33.852055 baseline, primary, temperature_monitor\n",
+      "5  8e2b3b5 29    count    1       success 2021-03-17 00:31:23.124599 baseline, primary                     \n",
+      "6  aab735d 30    count    10      success 2021-03-17 00:31:23.529676 baseline, primary                     \n",
+      "7  0ac9f00 31    count    10      success 2021-03-17 00:31:24.314197 baseline, primary                     \n",
+      "8  be32b29 32    count    50      success 2021-03-17 00:31:44.803099 baseline, primary                     \n",
+      "9  766d818 33    count    1       success 2021-03-17 00:32:55.210801 baseline, primary                     \n",
+      "10 5c304b4 33    scan     11      success 2021-04-07 15:55:09.987161 baseline, primary                     \n",
+      "11 b023724 187   rel_scan 5       success 2021-05-19 15:13:47.622341 baseline, primary                     \n",
+      "12 a4c77cc 188   rel_scan 8       success 2021-05-19 15:14:56.577983 baseline, primary                     \n",
+      "== ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "get_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\", until=\"2021-05-19 15:15\")"
+    "runs = get_tiled_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\", until=\"2021-05-19 15:15\")\n",
+    "print(run_summary_table(runs))"
    ]
   },
   {
@@ -323,18 +376,31 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Node {'d6e1bad1-92f6-4257-8d5e-53172cd9b784', ...} ~6 entries>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "= ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "# uid7    scan# plan     #points exit    started                    streams                               \n",
+      "= ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "1 d6e1bad 25    rel_scan 23      success 2021-03-17 00:30:04.160113 baseline, primary, temperature_monitor\n",
+      "2 e43969f 26    rel_scan 23      success 2021-03-17 00:30:21.215641 baseline, primary, temperature_monitor\n",
+      "3 fb747f8 27    rel_scan 23      success 2021-03-17 00:30:27.630615 baseline, primary, temperature_monitor\n",
+      "4 e8c36fe 28    rel_scan 23      success 2021-03-17 00:30:33.852055 baseline, primary, temperature_monitor\n",
+      "5 b023724 187   rel_scan 5       success 2021-05-19 15:13:47.622341 baseline, primary                     \n",
+      "6 a4c77cc 188   rel_scan 8       success 2021-05-19 15:14:56.577983 baseline, primary                     \n",
+      "= ======= ===== ======== ======= ======= ========================== ======================================\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "get_runs(client[\"class_2021_03\"], since=\"2021-03-17 00:30\", until=\"2021-05-19 15:15\", plan_name=\"rel_scan\")"
+    "runs = get_tiled_runs(\n",
+    "    client[\"class_2021_03\"], \n",
+    "    since=\"2021-03-17 00:30\", \n",
+    "    until=\"2021-05-19 15:15\", \n",
+    "    plan_name=\"rel_scan\"\n",
+    ")\n",
+    "print(run_summary_table(runs))"
    ]
   },
   {
@@ -351,19 +417,22 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Node {'a4c77cc5-dd49-4fc2-90e6-e3cd92667037'}>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "= ======= ===== ======== ======= ======= ========================== =================\n",
+      "# uid7    scan# plan     #points exit    started                    streams          \n",
+      "= ======= ===== ======== ======= ======= ========================== =================\n",
+      "1 a4c77cc 188   rel_scan 8       success 2021-05-19 15:14:56.577983 baseline, primary\n",
+      "= ======= ===== ======== ======= ======= ========================== =================\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "# One last search, for a specific `scan_id`:\n",
-    "get_runs(client[\"class_2021_03\"], scan_id=188)"
+    "runs = get_tiled_runs(client[\"class_2021_03\"], scan_id=188)\n",
+    "print(run_summary_table(runs))"
    ]
   }
  ],
